--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render 'shared/navigation' %>
+  <div class="container">
+    <%= flash_messages %>
+    <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
+  </div>
+  <%# render 'shared/footer' %>
 </body>
 </html>
