--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome to the club</h1>
-<p>Find me in app/views/static_pages/welcome.html.erb</p>
+<div class="jumbotron">
+  <h1 class="text-center">Welcome!</h1>
+  <p><%= image_tag 'clubbing.jpg', class: 'center-block img-rounded' %></p>
+</div>
