--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,21 +1,28 @@
-<h1>Signup</h1>
+<h1 class="text-center">Signup</h1>
 
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <%= form_for(@user) do |f| %>
+    <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
+    </div>
 
+    <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
-
+    </div>
+    <div class="form-group">
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
-
+    </div>
+    <div class="form-group">
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Create my account", class: "btn btn-primary center-block" %>
+    </div>
     <% end %>
   </div>
 </div>
