--- a/app/views/static_pages/not_in_the_list.html.erb
+++ b/app/views/static_pages/not_in_the_list.html.erb
@@ -4,7 +4,7 @@
   <div class="text-center">
     <div class="btn-group">
       <%= link_to "Log in", login_path, class: 'btn btn-success navbar-btn' %>
-      <%= link_to "Signup", signup_path, class: 'btn btn-primary navbar-btn' %>
+      <%= link_to "Signup", new_user_path, class: 'btn btn-primary navbar-btn' %>
     </div>
   </div>
 </div>
